# soft_arm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ddpg.py  package.xml
example_nets/: DQN.py  DQN_path_planning.py  DQN_path_planning2.py  batch_normalization_example.ipynb  env.py  env2.py  map_env.py
example_nets/logs/: events.out.tfevents.1507933175.EN4114892L  events.out.tfevents.1507933296.EN4114892L  events.out.tfevents.1507933468.EN4114892L  events.out.tfevents.1507935219.EN4114892L  events.out.tfevents.1507935348.EN4114892L  events.out.tfevents.1507936467.EN4114892L  events.out.tfevents.1507936503.EN4114892L  events.out.tfevents.1507936651.EN4114892L  events.out.tfevents.1507937962.EN4114892L  events.out.tfevents.1507938127.EN4114892L  events.out.tfevents.1507938292.EN4114892L  events.out.tfevents.1507938339.EN4114892L  events.out.tfevents.1507938477.EN4114892L  events.out.tfevents.1507938558.EN4114892L  events.out.tfevents.1507938708.EN4114892L  events.out.tfevents.1507938814.EN4114892L  events.out.tfevents.1507938842.EN4114892L
example_nets/model/: model.ckpt.data-00000-of-00001  model.ckpt.index
include/: PoseSubsriber.h
labview/: service_sever.vi  subscriber.vi  system7_60psi.vi
launch/: soft_arm.launch
src/: Env.py  Environment.py  Interactive training.ipynb  PoseSubscriber.cpp  README.md  StateSubscriber.cpp  action_origin_end.p  action_state_data  action_state_data1  action_state_recorder.py  check_memory.py  data_process.py  ddpg.py  ends.p  generate_sim_data.py  init_test.py  memory.p  naive_pose_pub.py  pf_network.py  pub.py  read_mocap.cpp  read_state.cpp  run_action.py  simulator.py  state_pub_test.py  supervised_training.ipynb  target_generator.py  target_pub.py  test_callback.py  test_main.cpp  test_pendulum.py  tracking.py  tracking_pfn.py  training.py  training2.py  training3_sim.py  training4.py  training5_sim.py  training6_greedy.py  training7_pfn.py
srv/: OneSeg.srv
(+17 files in other folders)
